--- a/Univibe/src/component/Content/ContentStyle.css
+++ b/Univibe/src/component/Content/ContentStyle.css
@@ -7,7 +7,6 @@
     max-width: 1960px;
     padding: 0 40px;
     font-family: 'Itim', sans-serif;
-
 }
 
 .card {
@@ -19,6 +18,7 @@
     flex-direction: column;
     text-decoration: none;
     border-radius: 10px;
+    gap: 3px;
 }
 
 .photo {
